# bit-renderer

./: .gitignore  CMakeLists.txt  bittransformer.cpp  bittransformer.h  bitwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  readme.md
.github/workflows/: cmake-multi-platform.yml
bittransformerlib/: CMakeLists.txt  bittransformerlib.cpp  bittransformerlib.h
